// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rating should be rendered correctly 1`] = `
<div
  aria-valuemax={5}
  aria-valuemin={1}
  aria-valuenow={2}
  className="container root size-18"
  onKeyDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  role="slider"
  tabIndex={0}
>
  <div
    className="container"
  >
    <div
      className="uui-rating-empty-star-container"
    >
      <div
        className="uui-rating-star"
      >
        <div
          className="container uui-icon uui-enabled"
          style={{}}
        >
          <svg
            className=""
          />
        </div>
      </div>
      <div
        className="uui-rating-star"
      >
        <div
          className="container uui-icon uui-enabled"
          style={{}}
        >
          <svg
            className=""
          />
        </div>
      </div>
      <div
        className="uui-rating-star"
      >
        <div
          className="container uui-icon uui-enabled"
          style={{}}
        >
          <svg
            className=""
          />
        </div>
      </div>
      <div
        className="uui-rating-star"
      >
        <div
          className="container uui-icon uui-enabled"
          style={{}}
        >
          <svg
            className=""
          />
        </div>
      </div>
      <div
        className="uui-rating-star"
      >
        <div
          className="container uui-icon uui-enabled"
          style={{}}
        >
          <svg
            className=""
          />
        </div>
      </div>
    </div>
    <div
      className="uui-rating-filled-star-container"
      style={
        {
          "width": NaN,
        }
      }
    >
      <div
        className="uui-rating-star"
      >
        <div
          className="container uui-icon uui-enabled"
          style={{}}
        >
          <svg
            className=""
          />
        </div>
      </div>
      <div
        className="uui-rating-star"
      >
        <div
          className="container uui-icon uui-enabled"
          style={{}}
        >
          <svg
            className=""
          />
        </div>
      </div>
      <div
        className="uui-rating-star"
      >
        <div
          className="container uui-icon uui-enabled"
          style={{}}
        >
          <svg
            className=""
          />
        </div>
      </div>
      <div
        className="uui-rating-star"
      >
        <div
          className="container uui-icon uui-enabled"
          style={{}}
        >
          <svg
            className=""
          />
        </div>
      </div>
      <div
        className="uui-rating-star"
      >
        <div
          className="container uui-icon uui-enabled"
          style={{}}
        >
          <svg
            className=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Rating should be rendered correctly with props 1`] = `
<div
  aria-valuemax={5}
  aria-valuemin={1}
  aria-valuenow={2}
  className="container root size-24"
  onKeyDown={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  role="slider"
  tabIndex={0}
>
  <div
    className="container"
  >
    <div
      className="uui-rating-empty-star-container"
    >
      <div
        className="uui-rating-star"
      >
        <div
          className="container uui-icon uui-enabled"
          style={{}}
        >
          <svg
            className=""
          />
        </div>
      </div>
      <div
        className="uui-rating-star"
      >
        <div
          className="container uui-icon uui-enabled"
          style={{}}
        >
          <svg
            className=""
          />
        </div>
      </div>
      <div
        className="uui-rating-star"
      >
        <div
          className="container uui-icon uui-enabled"
          style={{}}
        >
          <svg
            className=""
          />
        </div>
      </div>
      <div
        className="uui-rating-star"
      >
        <div
          className="container uui-icon uui-enabled"
          style={{}}
        >
          <svg
            className=""
          />
        </div>
      </div>
      <div
        className="uui-rating-star"
      >
        <div
          className="container uui-icon uui-enabled"
          style={{}}
        >
          <svg
            className=""
          />
        </div>
      </div>
    </div>
    <div
      className="uui-rating-filled-star-container"
      style={
        {
          "width": NaN,
        }
      }
    >
      <div
        className="uui-rating-star"
      >
        <div
          className="container uui-icon uui-enabled"
          style={{}}
        >
          <svg
            className=""
          />
        </div>
      </div>
      <div
        className="uui-rating-star"
      >
        <div
          className="container uui-icon uui-enabled"
          style={{}}
        >
          <svg
            className=""
          />
        </div>
      </div>
      <div
        className="uui-rating-star"
      >
        <div
          className="container uui-icon uui-enabled"
          style={{}}
        >
          <svg
            className=""
          />
        </div>
      </div>
      <div
        className="uui-rating-star"
      >
        <div
          className="container uui-icon uui-enabled"
          style={{}}
        >
          <svg
            className=""
          />
        </div>
      </div>
      <div
        className="uui-rating-star"
      >
        <div
          className="container uui-icon uui-enabled"
          style={{}}
        >
          <svg
            className=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
